[package]
name = "yarism"
version = "0.1.0"
edition = "2021"
description = "Yet another rust implementation of Chinese standard cryptographic algorithms, including SM2,SM3,SM4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
num-bigint = "0.4.3"
num-traits = "0.2.14"
num-integer = "0.1.44"
#lazy_static = "1.4.0"
hex = "0.4.3"
uuid = { version = "0.8.2", features = ["v4"] }
yasna = { version = "0.5.0", features = ["num-bigint"] }